# WealthAgent

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  second-phase.md
.claude/: settings.local.json
config/: investment_prompt.md  investment_prompt.txt  settings.py
src/: advisor.py  advisor_validator.py  alert_engine.py  context_builder.py  db.py  entrypoint.py  fundamentals.py  fx_fetcher.py  iwda_fetcher.py  log_setup.py  news_extractor.py  news_fetcher.py  notifier.py  ollama_client.py  price_fetcher.py  purge.py  reports.py  run_pipeline.py  screener.py  telegram_bot.py
src/dashboard/: __init__.py  __main__.py  app.py  auth.py  routes_alerts.py  routes_charts.py  routes_iwda.py  routes_logs.py  routes_purge.py  routes_reports.py
src/dashboard-ui/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/dashboard-ui/src/: main.tsx  routeTree.gen.tsx
src/dashboard-ui/src/components/: layout.tsx
src/dashboard-ui/src/pages/: alerts.tsx  dashboard.tsx  report-detail.tsx  reports.tsx
src/dashboard/spa/: index.html
src/dashboard/spa/assets/: index-dAM5zFJq.js  index-gCCkEMS7.css
src/dashboard/static/: app.css
src/dashboard/templates/: base.html  charts.html  login.html  purge.html
src/dashboard/templates/alerts/: config.html  list.html
src/dashboard/templates/logs/: list.html  view.html
src/dashboard/templates/reports/: detail.html  list.html
tests/: conftest.py  test_advisor.py  test_advisor_validator.py  test_alert_engine.py  test_context_builder.py  test_dashboard_alerts.py  test_dashboard_app.py  test_dashboard_auth.py  test_dashboard_charts.py  test_dashboard_iwda.py  test_dashboard_logs.py  test_dashboard_purge.py  test_dashboard_reports.py  test_db.py  test_entrypoint.py  test_fetchers.py  test_fundamentals.py  test_fx_fetcher.py  test_iwda_fetcher.py  test_log_setup.py  test_news_extractor.py  test_news_fetcher.py  test_news_pipeline.py  test_notifier.py  test_ollama_client.py  test_price_fetcher.py  test_purge.py  test_reports.py  test_run_pipeline.py  test_screener.py  test_settings.py  test_telegram_bot.py
