[project]
name = "wealthagent"
version = "0.1.0"
description = "Investment pipeline for Raspberry Pi 5"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "feedparser",
    "finvizfinance",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "lxml",
    "markdown>=3.7",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart>=0.0.20",
    "python-telegram-bot",
    "requests",
    "schedule",
    "uvicorn[standard]>=0.34.0",
    "yfinance",
]

[dependency-groups]
dev = [
    "anyio[trio]>=4.0.0",
    "pre-commit",
    "pytest",
    "pytest-asyncio>=0.24.0",
    "pytest-cov",
    "ruff",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "config", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLW",  # pylint warning
]

[tool.ruff.lint.isort]
known-first-party = ["config"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",    # module-level imports not at top (bootstrap needed)
    "SIM115",  # NamedTemporaryFile at module level (can't use context manager)
    "PLW0603", # global counters in test helpers
    "PLC0415", # lazy imports after bootstrap
    "SIM105",  # try/except/pass for cleanup is clearer in test teardown
    "PLW0108", # lambda wrappers are clearer in monkeypatch test fixtures
]
"src/run_pipeline.py" = [
    "PLC0415", # lazy imports in cmd_* functions are intentional (import what you need)
]
"src/screener.py" = [
    "PLC0415", # lazy import of finvizfinance inside try/except (fragile, may not be installed)
]
"src/telegram_bot.py" = [
    "PLC0415", # lazy imports in handlers and scheduler functions are intentional
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "ollama: requires a live Ollama instance — enable with --with-ollama",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src", "config"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
